force-app/main/default/objects/Account/fields/BairroComercial__c.field-meta.xml
<CustomField>
    <fullName>BairroComercial__c</fullName>
    <description>Bairro Comercial da conta</description>
    <label>Bairro (Comercial)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>