force-app/main/default/objects/Account/fields/CargoJuridico__c.field-meta.xml
<CustomField>
    <fullName>CargoJuridico__c</fullName>
    <description>Cargo para pessoa jurídica</description>
    <label>Cargo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>