force-app/main/default/objects/Account/fields/CartaoDeCredito2Bandeira__c.field-meta.xml
<CustomField>
    <fullName>CartaoDeCredito2Bandeira__c</fullName>
    <label>Cartão de Crédito 2 (Bandeira)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>