force-app/main/default/objects/Account/fields/CartaoDeCredito2ClienteDesde__c.field-meta.xml
<CustomField>
    <fullName>CartaoDeCredito2ClienteDesde__c</fullName>
    <label>Cartão de Crédito 2 (Cliente desde)</label>
    <type>Date</type>
</CustomField>