force-app/main/default/objects/Account/fields/CartaoDeCreditoBandeira__c.field-meta.xml
<CustomField>
    <fullName>CartaoDeCreditoBandeira__c</fullName>
    <description>Cartão de Crédito (Bandeira) da conta</description>
    <label>Cartão de Crédito (Bandeira)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>