force-app/main/default/objects/Account/fields/CartaoDeCreditoClienteDesde__c.field-meta.xml
<CustomField>
    <fullName>CartaoDeCreditoClienteDesde__c</fullName>
    <description>Data Cartão de Crédito (Cliente desde) da conta</description>
    <label>Cartão de Crédito (Cliente desde)</label>
    <type>Date</type>
</CustomField>