force-app/main/default/objects/Account/fields/CartaoDeCreditoLimite__c.field-meta.xml
<CustomField>
    <fullName>CartaoDeCreditoLimite__c</fullName>
    <description>Cartão de Crédito (Limite) da conta</description>
    <label>Cartão de Crédito (Limite)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>