force-app/main/default/objects/Account/fields/CelularAdicional__c.field-meta.xml
<CustomField>
    <fullName>CelularAdicional__c</fullName>
    <label>Celular Adicional</label>
    <type>Phone</type>
</CustomField>