force-app/main/default/objects/Account/fields/CelularComercialAdicional__c.field-meta.xml
<CustomField>
    <fullName>CelularComercialAdicional__c</fullName>
    <description>Celular comercial adicional da conta</description>
    <label>Celular Comercial Adicional</label>
    <type>Phone</type>
</CustomField>