force-app/main/default/objects/Account/fields/CelularJuridico__c.field-meta.xml
<CustomField>
    <fullName>CelularJuridico__c</fullName>
    <label>Celular</label>
    <type>Phone</type>
</CustomField>