force-app/main/default/objects/Account/fields/CEPComercial__c.field-meta.xml
<CustomField>
    <fullName>CEPComercial__c</fullName>
    <description>CEP comercial da conta</description>
    <label>CEP (Comercial)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>