force-app/main/default/objects/Account/fields/ChequeEspecial2ClienteDesde__c.field-meta.xml
<CustomField>
    <fullName>ChequeEspecial2ClienteDesde__c</fullName>
    <label>Cheque Especial 2(Cliente desde)</label>
    <type>Date</type>
</CustomField>