force-app/main/default/objects/Account/fields/ChequeEspecialFaturaMes__c.field-meta.xml
<CustomField>
    <fullName>ChequeEspecialFaturaMes__c</fullName>
    <label>Cheque Especial  (Fatura mês)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>