force-app/main/default/objects/Account/fields/ChequeEspecialLimite__c.field-meta.xml
<CustomField>
    <fullName>ChequeEspecialLimite__c</fullName>
    <label>Cheque Especial  (Limite)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>