force-app/main/default/objects/Account/fields/CidadeComercial__c.field-meta.xml
<CustomField>
    <fullName>CidadeComercial__c</fullName>
    <description>Cidade Comercial da conta</description>
    <label>Cidade (Comercial)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>