force-app/main/default/objects/Account/fields/ComplementoComercial__c.field-meta.xml
<CustomField>
    <fullName>ComplementoComercial__c</fullName>
    <description>Complemento comercial da conta</description>
    <label>Complemento (Comercial)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>