force-app/main/default/objects/Account/fields/ContaBanco__c.field-meta.xml
<CustomField>
    <fullName>ContaBanco__c</fullName>
    <label>Conta</label>
    <length>30</length>
    <type>Text</type>
</CustomField>