force-app/main/default/objects/Account/fields/DataCasamento__c.field-meta.xml
<CustomField>
    <fullName>DataCasamento__c</fullName>
    <description>Campo onde deve ser preeenchido com a data de casamento do usuário.</description>
    <inlineHelpText>Campo onde deve ser preeenchido com a data de casamento do usuário.</inlineHelpText>
    <label>Data de Casamento</label>
    <type>Date</type>
</CustomField>