force-app/main/default/objects/Account/fields/DataConstituicao__c.field-meta.xml
<CustomField>
    <fullName>DataConstituicao__c</fullName>
    <description>Data de constituição da empresa</description>
    <label>Data da Constituição</label>
    <type>Date</type>
</CustomField>