force-app/main/default/objects/Account/fields/DataDaEmissao__c.field-meta.xml
<CustomField>
    <fullName>DataDaEmissao__c</fullName>
    <description>Data da Emissão da conta</description>
    <label>Data da Emissão</label>
    <type>Date</type>
</CustomField>