force-app/main/default/objects/Account/fields/DataDeNascimento__c.field-meta.xml
<CustomField>
    <fullName>DataDeNascimento__c</fullName>
    <description>Data de nascimento da conta</description>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>