force-app/main/default/objects/Account/fields/DataUltimaAlteracaoContratual__c.field-meta.xml
<CustomField>
    <fullName>DataUltimaAlteracaoContratual__c</fullName>
    <description>Data da última alteração contratual</description>
    <label>Data da Última Alteração Contratual</label>
    <type>Date</type>
</CustomField>