force-app/main/default/objects/Account/fields/EmailAdicional__c.field-meta.xml
<CustomField>
    <fullName>EmailAdicional__c</fullName>
    <description>Email adicional</description>
    <label>Email Adicional</label>
    <type>Email</type>
</CustomField>