force-app/main/default/objects/Account/fields/EmailComerical__c.field-meta.xml
<CustomField>
    <fullName>EmailComerical__c</fullName>
    <description>Email comercial da conta</description>
    <label>Email Comerical</label>
    <length>80</length>
    <type>Text</type>
</CustomField>