force-app/main/default/objects/Account/fields/EmailJuridico__c.field-meta.xml
<CustomField>
    <fullName>EmailJuridico__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>