force-app/main/default/objects/Account/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <description>CidadeEstado/Pais do da conta</description>
    <label>Endereço</label>
    <length>30</length>
    <type>Text</type>
</CustomField>