force-app/main/default/objects/Account/fields/GratificacsoAnual__c.field-meta.xml
<CustomField>
    <fullName>GratificacsoAnual__c</fullName>
    <description>Gratificação anual da conta</description>
    <label>Gratificação anual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>