force-app/main/default/objects/Account/fields/Idade__c.field-meta.xml
<CustomField>
    <fullName>Idade__c</fullName>
    <description>Idade da conta</description>
    <formula>YEAR(TODAY()) - YEAR(DataDeNascimento__c)</formula>
    <label>Idade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>