force-app/main/default/objects/Account/fields/Idades__c.field-meta.xml
<CustomField>
    <fullName>Idades__c</fullName>
    <description>Idades dos dependentes</description>
    <label>Idades</label>
    <length>20</length>
    <type>Text</type>
</CustomField>