force-app/main/default/objects/Account/fields/InscricaoEstadual__c.field-meta.xml
<CustomField>
    <fullName>InscricaoEstadual__c</fullName>
    <description>A Inscrição Estadual é o registro do contribuinte 
 sobre a Circulação de Mercadoria e Serviços</description>
    <inlineHelpText>Registro do contribuinte sobre a Circulação
de Mercadoria e Serviços.</inlineHelpText>
    <label>Inscrição Estadual</label>
    <length>20</length>
    <type>Text</type>
</CustomField>