force-app/main/default/objects/Account/fields/InscricaoMunicipal__c.field-meta.xml
<CustomField>
    <fullName>InscricaoMunicipal__c</fullName>
    <description>Número de Inscrição Municipal</description>
    <inlineHelpText>Identificação do contribuinte no Cadastro Tributário Municipal.</inlineHelpText>
    <label>Inscrição Municipal</label>
    <length>14</length>
    <type>Text</type>
</CustomField>