force-app/main/default/objects/Account/fields/Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Logradouro__c</fullName>
    <description>Logradouro da conta</description>
    <label>Logradouro</label>
    <length>80</length>
    <type>Text</type>
</CustomField>