force-app/main/default/objects/Account/fields/LogradouroComercial__c.field-meta.xml
<CustomField>
    <fullName>LogradouroComercial__c</fullName>
    <description>Logradouro comercial da conta</description>
    <label>Logradouro (Comercial)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>