force-app/main/default/objects/Account/fields/MidiaDeOrigem__c.field-meta.xml
<CustomField>
    <fullName>MidiaDeOrigem__c</fullName>
    <label>Mídia de Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Televisão</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Publicações</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Facebook Ads</fullName>
            </value>
            <value>
                <fullName>Site You</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>TikTok</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
            <value>
                <fullName>Tapume</fullName>
            </value>
            <value>
                <fullName>Anúncio de Loja</fullName>
            </value>
            <value>
                <fullName>Wi-Fi</fullName>
            </value>
            <value>
                <fullName>123i</fullName>
            </value>
            <value>
                <fullName>Agente Imóvel</fullName>
            </value>
            <value>
                <fullName>Apto</fullName>
            </value>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>Bing-cpc</fullName>
            </value>
            <value>
                <fullName>Bing-organico</fullName>
            </value>
            <value>
                <fullName>Cadastro Corretor</fullName>
            </value>
            <value>
                <fullName>Casafy</fullName>
            </value>
            <value>
                <fullName>CNN</fullName>
            </value>
            <value>
                <fullName>Convite Evento</fullName>
            </value>
            <value>
                <fullName>Direto</fullName>
            </value>
            <value>
                <fullName>Duckduckgo</fullName>
            </value>
            <value>
                <fullName>ESPN</fullName>
            </value>
            <value>
                <fullName>Exame</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Fb_ig_form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>