force-app/main/default/objects/Account/fields/MoraDesde__c.field-meta.xml
<CustomField>
    <fullName>MoraDesde__c</fullName>
    <description>Data desde quando mora no endereço cadastrado</description>
    <label>Mora desde (mês/ano)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>