force-app/main/default/objects/Account/fields/NomeDaMae__c.field-meta.xml
<CustomField>
    <fullName>NomeDaMae__c</fullName>
    <description>Nome da mãe da conta</description>
    <label>Nome da Mãe</label>
    <length>100</length>
    <type>Text</type>
</CustomField>