force-app/main/default/objects/Account/fields/NomeDoPai__c.field-meta.xml
<CustomField>
    <fullName>NomeDoPai__c</fullName>
    <description>Nome do Pai da conta</description>
    <label>Nome do Pai</label>
    <length>100</length>
    <type>Text</type>
</CustomField>