force-app/main/default/objects/Account/fields/NomeEmpresa__c.field-meta.xml
<CustomField>
    <fullName>NomeEmpresa__c</fullName>
    <label>Nome da Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>