force-app/main/default/objects/Account/fields/NumeroComercial__c.field-meta.xml
<CustomField>
    <fullName>NumeroComercial__c</fullName>
    <description>Número comercial da conta</description>
    <label>Número (Comercial)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>