force-app/main/default/objects/Account/fields/NumeroDeDependentes__c.field-meta.xml
<CustomField>
    <fullName>NumeroDeDependentes__c</fullName>
    <description>Número de dependentes da conta</description>
    <label>Número de Dependentes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>