force-app/main/default/objects/Account/fields/OrgaoExpedidor__c.field-meta.xml
<CustomField>
    <fullName>OrgaoExpedidor__c</fullName>
    <description>Órgão Expedidor da conta</description>
    <label>Órgão Expedidor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>