force-app/main/default/objects/Account/fields/Outros__c.field-meta.xml
<CustomField>
    <fullName>Outros__c</fullName>
    <description>Outros Ativos finaceiros da conta</description>
    <label>Outros</label>
    <length>80</length>
    <type>Text</type>
</CustomField>