force-app/main/default/objects/Account/fields/OutrosTiposDeCredito__c.field-meta.xml
<CustomField>
    <fullName>OutrosTiposDeCredito__c</fullName>
    <label>Outros tipos de Crédito</label>
    <length>30</length>
    <type>Text</type>
</CustomField>