force-app/main/default/objects/Account/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <description>País da conta</description>
    <label>País</label>
    <length>50</length>
    <type>Text</type>
</CustomField>