force-app/main/default/objects/Account/fields/PensaoAposentadoria__c.field-meta.xml
<CustomField>
    <fullName>PensaoAposentadoria__c</fullName>
    <description>Pensão/aposentadoria da conta</description>
    <label>Pensão/aposentadoria</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>