force-app/main/default/objects/Account/fields/Profissao__c.field-meta.xml
<CustomField>
    <fullName>Profissao__c</fullName>
    <description>Profissão da conta</description>
    <label>Profissão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrador</fullName>
            </value>
            <value>
                <fullName>Administrador de Redes</fullName>
            </value>
            <value>
                <fullName>Advogado</fullName>
            </value>
            <value>
                <fullName>Agrônomo</fullName>
            </value>
            <value>
                <fullName>Analista de Recursos Humanos</fullName>
            </value>
            <value>
                <fullName>Analista de Sistemas</fullName>
            </value>
            <value>
                <fullName>Arquiteto</fullName>
            </value>
            <value>
                <fullName>Artista Plástico</fullName>
            </value>
            <value>
                <fullName>Assistente Social</fullName>
            </value>
            <value>
                <fullName>Atendente de Loja</fullName>
            </value>
            <value>
                <fullName>Ator</fullName>
            </value>
            <value>
                <fullName>autônomo</fullName>
            </value>
            <value>
                <fullName>Biólogo</fullName>
            </value>
            <value>
                <fullName>Caixa</fullName>
            </value>
            <value>
                <fullName>Consultor Empresarial</fullName>
            </value>
            <value>
                <fullName>Coordenador Pedagógico</fullName>
            </value>
            <value>
                <fullName>Designer Gráfico</fullName>
            </value>
            <value>
                <fullName>Diretor de Arte</fullName>
            </value>
            <value>
                <fullName>Diretor Escolar</fullName>
            </value>
            <value>
                <fullName>Empreendedor</fullName>
            </value>
            <value>
                <fullName>Engenheiro Ambiental</fullName>
            </value>
            <value>
                <fullName>Engenheiro Civil</fullName>
            </value>
            <value>
                <fullName>Engenheiro de Produção</fullName>
            </value>
            <value>
                <fullName>Engenheiro Eletricista</fullName>
            </value>
            <value>
                <fullName>Engenheiro Mecânico</fullName>
            </value>
            <value>
                <fullName>Fisioterapeuta</fullName>
            </value>
            <value>
                <fullName>Geógrafo</fullName>
            </value>
            <value>
                <fullName>Gerente Administrativo</fullName>
            </value>
            <value>
                <fullName>Gerente de Vendas</fullName>
            </value>
            <value>
                <fullName>Músico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>