force-app/main/default/objects/Account/fields/RazaoSocial__c.field-meta.xml
<CustomField>
    <fullName>RazaoSocial__c</fullName>
    <description>A razão social é o nome sob o qual uma empresa se identifica para se diferenciar das demais.</description>
    <inlineHelpText>A razão social é o nome sob o qual uma empresa se identifica para se diferenciar das demais.</inlineHelpText>
    <label>Razão Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>