force-app/main/default/objects/Account/fields/RemuneracaoMensalBruto__c.field-meta.xml
<CustomField>
    <fullName>RemuneracaoMensalBruto__c</fullName>
    <description>Remuneração mensal (Bruto) da conta</description>
    <label>Remuneração mensal (Bruto)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>